--- a/springboot/src/main/resources/htmlPackage/sign.html
+++ b/springboot/src/main/resources/htmlPackage/sign.html
@@ -187,7 +187,7 @@
     <p class="sign-logo">sign</p>
     <!--            <div class = "input">-->
     <p class="miaoshu">请在下面输入你的邮箱地址，我们将会发一封带有验证码的邮件到你填写的邮箱中.</p>
-    <p class="input">请输入你的邮箱: <input class="input2" id="email" type="text" name="email" placeholder="email" autocomplete="off" value="SASAKPANJANG. RT 004 RW 002 Jl AMD Raya. Jl Masjid SUKASARI  CIDOLOG  KABUPATEN CIAMIS  PROVINSI JAWA BARAT"/></p>
+    <p class="input">请输入你的邮箱: <input class="input2" id="email" type="text" name="email" placeholder="email" autocomplete="off"/></p>
     <p style="margin: 0px 46px ">
        <input class="input3" id="yzm" type="text" name="yzm" placeholder="请输入验证码" style="margin: 10px 0px 10px 50px" autocomplete="off"/>
        <input type="button" id="sendbtn" onclick="sendEmail(this)" class="btn1" value="发送验证码" >
