--- a/springboot/src/main/resources/htmlPackage/Table.html
+++ b/springboot/src/main/resources/htmlPackage/Table.html
@@ -245,7 +245,18 @@
             <div id="mini"  style="border-bottom:1px solid rgba(255,255,255,.1);background-color: #000"><img id="logoo" src="images/mainlogo.png" onclick="window.location.href='welcome.html'"></div>
         </div>
         <ul id="aat">
-
+            <li class='nav-item'><a href='javascript:;'><i class='my-icon nav-icon icon_1'></i><span>反叛军基地</span><i class='my-icon nav-more'></i></a>
+                <ul>
+                    <li><a href='javascript:;'><span>嘉定区基地</span></a></li>
+                    <li><a href='javascript:;'><span>浦东新区基地</span></a></li>
+                </ul>
+            </li>
+            <li class='nav-item'><a href='javascript:;'><i class='my-icon nav-icon icon_1'></i><span>休息区</span><i class='my-icon nav-more'></i></a>
+                <ul>
+                    <li><a href='javascript:;'><span>视频播放</span></a></li>
+                    <li><a href='javascript:;'><span>音频播放</span></a></li>
+                </ul>
+            </li>
         </ul>
     </div>
 </div>
@@ -452,44 +463,6 @@
             console.log('获取的eeid：'+arr[0]);
             window.location.href="resetPwd.html?"+arr[0];
         });
-
-        /*
-        控制导航页面的文字信息
-        */
-       $(function(){
-           var navList = [
-               {
-                   "p" : "反叛军基地",
-                   "c" : ["嘉定区基地","浦东新区基地"]
-               },
-               {
-                   "p" : "石嘴山市",
-                   "c" : ["大武口区","惠农区","平罗县"]
-               },
-               {
-                   "p" : "吴忠市",
-                   "c" : ["利通区","红寺堡区","盐池县","同心县","青铜峡市"]
-               },
-               {
-                   "p" : "中卫市",
-                   "c" : ["沙坡头区","中宁县","海原县"]
-               },
-               {
-                   "p" : "固原市",
-                   "c" : ["原州区","泾源县","西吉县","隆德县","彭阳县"]
-               }
-           ]
-           var navData = '';
-           for(let i=0;i<navList.length;i++){
-               navData+= "<li class='nav-item'><a href='javascript:;'><i class='my-icon nav-icon icon_1'></i><span>"+navList[i].p+"</span><i class='my-icon nav-more'></i></a><ul>"
-               for(let w=0;w<navList[i].c.length;w++){
-                   navData+="<li><a href='javascript:;'><span>"+navList[i].c[w]+"</span></a></li>"
-               }
-               navData+="</ul></li>"
-           }
-           // console.log(navData)
-           $('#aat').html(navData)
-       })
 
        /*
        导航页的收缩与展开
