--- a/springboot/src/main/resources/htmlPackage/video.html
+++ b/springboot/src/main/resources/htmlPackage/video.html
@@ -129,6 +129,7 @@
             border:1px #ccc solid;
             border-radius: 10px;
             outline: none;
+            transition: 3s;
         }
 
         #videoList{
@@ -143,7 +144,7 @@
             overflow: scroll;
         }
 
-        #v1{
+        .v1{
             width:98%;
             height:20%;
             background-color: #000;
@@ -153,12 +154,12 @@
             position:relative;
         }
 
-        #image1{
+        .image{
             width: 100%;
             height:100%
         }
 
-        #v1 span{
+        .v1 span{
             width: 100%!important;
             height: 20% !important;
             text-align: center;
@@ -214,13 +215,13 @@
         <label class="titlelabel" id="welcomelabel">欢迎来到反叛军总部</label>
         <label class="titlelabel" id="userlabel">欢迎你，铁驭</label>
     </div>
-    <video id="videolala" src="lalala.mp4" onmouseover="showController()" onclick="lalala1()"></video>
+    <video id="videolala" src="lalala.mp4" onmouseover="showController()" onmouseleave="displayController()" ></video>
     <div id="videoList" >
         <div id="ziliaoku" >资料库</div>
-        <div id="v1">
-            <img id="image1"/>
-            <span>video1</span>
-        </div>
+<!--        <div class="v1">-->
+<!--            <img class="image"/>-->
+<!--            <span>video1</span>-->
+<!--        </div>-->
     </div>
 </div>
 
@@ -268,8 +269,14 @@
         document.getElementById("videolala").controls="true";
     }
 
+    function displayController(){
+       var lala =  document.getElementById("videolala");
+       lala.removeAttribute("controls")
+    }
+
     window.onload = function () {
         findDatas();
+        // showVideos();
     }
 
     function findDatas() {
@@ -288,7 +295,10 @@
                 if (obj.total >= 1) {
                     // alert("there are " + obj.total + " videos");
                     for(var i = 1;i<=obj.total;i++){
-
+                        $("#videoList").append("<div class=\"v1\">\n" +
+                            "            <img class=\"image\"/ >\n" +
+                            "            <span>video1</span>\n" +
+                            "        </div>");
                     }
 
                 }
@@ -301,6 +311,15 @@
                 alert("find data error");
             }
         });
+    }
+
+    function showVideos() {
+        for(var i=1;i<=2;i++) {
+            $("#videoList").append("<div class=\"v1\">\n" +
+                "            <img class=\"image\" src=''/>\n" +
+                "            <span>video1</span>\n" +
+                "        </div>");
+        }
     }
 
 
